# src/app/controllers/recipient/RecipientController.js
@@ -8,6 +8,20 @@ class RecipientController {
     /* #swagger.tags = ['Recipient']
        #swagger.description = 'Endpoint to post the specific recipient.' */
 
+    /*  #swagger.parameters['Recipient'] = {
+                in: 'body',
+                description: 'Recipient information.',
+                required: true,
+                type: 'object',
+                schema: { nome: '',
+                          rua: '',
+                          numero: 0,
+                          complemento: '',
+                          estado: '',
+                          cidade: '',
+                          cep: '' }
+              } */
+
     const nome = addRecipient(req.body);
     return res.send({ status: 200, message: `Destinatário ${nome} cadastrado com sucesso!` });
   }
@@ -15,6 +29,21 @@ class RecipientController {
   async update(req, res) {
     /* #swagger.tags = ['Recipient']
        #swagger.description = 'Endpoint to update the specific recipient.' */
+
+    /*  #swagger.parameters['Recipient'] = {
+            in: 'body',
+            description: 'Recipient information.',
+            required: true,
+            type: 'object',
+            schema: { id: 0,
+                      nome: '',
+                      rua: '',
+                      numero: 0,
+                      complemento: '',
+                      estado: '',
+                      cidade: '',
+                      cep: '' }
+          } */
 
     const nome = updateRecipient(req.body);
     return res.send({ status: 200, message: `Destinatário ${nome} editado com sucesso!` });
@@ -31,6 +60,11 @@ class RecipientController {
   async getByName(req, res) {
     /* #swagger.tags = ['Recipient']
        #swagger.description = 'Endpoint to get a recipient by name.' */
+
+    /*  #swagger.parameters['name'] = {
+                in: 'path',
+                description: 'Recipient name',
+                required: true } */
 
     const recipients = RecipientMethod.getByName(req.params);
     return res.json(recipients);
